新增個人介紹頁面

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </style>
 
 <body>
-    <a href="index.html">首頁</a>
-    <a href="about.html">關於我</a>
-    <a href="research.html">研究</a>
-    <a href="homework.html">作業</a>
-    <h3>陳定宏 Ding-Horng Chen</h3>
+    <a href="./index.html">首頁</a>
+    <a href="./about.html">關於我</a>
+    <a href="./research.html">研究</a>
+    <a href="./homework.html">作業</a>
+    <h3>黃翊恩</h3>
     <table>
         <tr>
             <td width="300px">
@@ -34,16 +34,13 @@
                     <li><a href="http://www.chendh.idv.tw/">個人網址</a></li>
                 </ul>
             </td>
-            <td width="200px">
-                <img src="img/chendh-1217x1536.jpg" alt="陳定宏" width="200px" />
-            </td>
+           
         </tr>
     </table>
     <h4>學歷</h4>
     <ul>
-        <li>成功大學 資訊工程研究所 博士</li>
-        <li>成功大學 資訊工程研究所 碩士</li>
-        <Li>成功大學 數學系</Li>
+        <li>白河國中</li>
+        <li>南臺科技大學資工系</li>
     </ul>
 </body>
 
