更新作業連結至 0320.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="./index.html">首頁</a>
     <a href="./about.html">關於我</a>
     <a href="./research.html">研究</a>
-    <a href="./homework.html">作業</a>
+    <a href="./0320.html">作業</a>
     <h3>黃翊恩</h3>
     <table>
         <tr>
