feat: Initialize 2025 React App with Vite, ESLint, and essential components
- Create package.json with dependencies for React, Vite, and ESLint.
- Add Vite logo SVG to public directory.
- Implement App component with MySlider, MyPanel, and MyCalculator components.
- Create styles for App and components.
- Develop MyCalculator with display, keypad, buttons, and error handling.
- Add MySlider for RGB color selection and MyPanel to visualize selected colors.
- Include README and issue documentation for component structure and functionality.
- Set up index.css for global styles and main entry point for React app.
- Configure Vite for project build and deployment.
- Add Water Puzzle HTML game with multiplication table functionality.

--- a/WaterPuzzle/0320.html
+++ b/WaterPuzzle/0320.html
@@ -57,6 +57,9 @@
     <input type="number" id="numberInput" placeholder="輸入一個數值" />
     <input type="button" value="OK" title="OK" onclick="myFunction()" />
     <div id="myId"></div>
+    
+    <h2>Water Puzzle 小遊戲</h2>
+    <iframe src="waterpuzzle.html" width="600" height="400" style="border:none;"></iframe>
 </body>
 
 </html>
