重構0320.html，新增N*N乘法表功能及水拼圖小遊戲的整合

--- a/0320.html
+++ b/0320.html
@@ -59,7 +59,7 @@
     <div id="myId"></div>
     
     <h2>Water Puzzle 小遊戲</h2>
-    <iframe src="waterpuzzle.html" width="600" height="400" style="border:none;"></iframe>
+    <iframe src="WaterPuzzle/WaterPuzzle.html" width="600" height="400" style="border:none;"></iframe>
 </body>
 
 </html>
