--- a/0320.html
+++ b/0320.html
@@ -178,6 +178,20 @@
         align-items: stretch;
       }
     }
+
+    @keyframes spin {
+      from {
+        transform: rotate(0deg);
+      }
+
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+    .spin {
+      animation: spin 2s linear infinite;
+    }
   </style>
 
   <script>
@@ -232,7 +246,7 @@
     <p>點擊下方圖示以開啟您的 React 專案：</p>
     <a href="http://localhost:5173/2025-react-app/" target="_blank" title="前往 React 專案" class="react-icon-link">
       <span class="react-icon-bg">
-        <img src="https://react.dev/favicon.ico" alt="React 專案" class="react-icon-img" />
+        <img src="https://react.dev/favicon.ico" alt="React 專案" class="react-icon-img spin" />
       </span>
     </a>
   </div>
