--- a/0320.html
+++ b/0320.html
@@ -244,7 +244,7 @@
   <div class="container react-link">
     <h2>React 專案連結</h2>
     <p>點擊下方圖示以開啟您的 React 專案：</p>
-    <a href="http://localhost:5173/2025-react-app/" target="_blank" title="前往 React 專案" class="react-icon-link">
+    <a href="./index.html" target="_blank" title="前往 React 專案" class="react-icon-link">
       <span class="react-icon-bg">
         <img src="https://react.dev/favicon.ico" alt="React 專案" class="react-icon-img spin" />
       </span>
